--- a/assets/style.css
+++ b/assets/style.css
@@ -40,3 +40,23 @@ iframe#tela {
     width: 269px;
     height: 471px;
 }
+section#redes-sociais{
+    padding: 20px;
+}
+
+section#redes-sociais img {
+    width: 50px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.418);
+    display: flex;
+    flex-direction: column-reverse;
+    margin-bottom: 30px;
+    box-sizing: border-box;
+}
+
+section#redes-sociais img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.61);
+    transform: translate(3px, 3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.568);
+    transition: transform 0.1s;
+}
